@@ -4,6 +4,10 @@ Changelog
 1.1b1 - Unreleased
 ------------------
 
+- Added a new explicit base normalizer for Thai, as the Unidecode based
+  transliteration isn't good enough.
+  [hannosch]
+
 - Added new specific normalizer for Japanese, which avoids the Unidecode based
   transliteration. This refs http://dev.plone.org/plone/ticket/9914.
   [hannosch]
